kustomize/flask-sample/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-sample
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: flask-sample
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: flask-sample
    spec:
      containers:
        - image: harbor.sandbox.local/library/flask-sample
          name: flask-sample
          ports:
            - containerPort: 80
              name: http
