kustomize/flask-sample/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-sample
spec:
  selector:
    app.kubernetes.io/name: flask-sample
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
